--- a/src/sass/styles/components/navbar.scss
+++ b/src/sass/styles/components/navbar.scss
@@ -71,6 +71,13 @@
     height: auto;
     position: relative;
     z-index: 40;
+    .brand{
+      img{
+       zoom: 0.7;
+       padding-top: 1.5rem; 
+      }
+     
+    }
     .toggle {
       display: block;
       z-index: 25;
@@ -78,6 +85,7 @@
       .x {
         color: white;
       }
+     
     }
     .button-especialista {
       display: none;
