--- a/src/sass/styles/components/partners.scss
+++ b/src/sass/styles/components/partners.scss
@@ -4,7 +4,7 @@
       @include text-style(2.50rem, 400, 2rem, $secondary-color);
       text-align: center;
     }
-  .partners {
+  .partners-content {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     justify-items: center;
@@ -17,14 +17,18 @@
   }
 }
 @media screen and (min-width: 280px) and (max-width: 1080px){
-  .partners-container {
+  .partners {
     display: flex;
     flex-direction: column;
     margin-top: 10rem;
-  .partners {
+    h1{
+      margin-top: 5rem;
+
+    }
+  .partners-content {
     grid-template-columns: repeat(2, 2fr );
     align-self: center;
-    zoom: 0.7;
+    zoom: 0.8;
   
   }
 }
