--- a/src/sass/styles/components/form.scss
+++ b/src/sass/styles/components/form.scss
@@ -8,6 +8,7 @@
     // Infos
     width: 50%;
     display: flex;
+    justify-content: center;
     height: 80vh;
     flex-direction: column;
     gap: 2rem;
@@ -41,11 +42,14 @@
     background-color: $secondary-color;
     color: white;
     border-radius: $border-radius;
-    margin: -1rem 0 4rem 0;
+    margin: 2rem 0 4rem 0;
     .form {
       display: flex;
       flex-direction: column;
+        h3{
+          @include text-style(1.5rem, 600, 2.4rem, $light-text);
 
+        }
       .form-msg {
         display: flex;
         flex-direction: column;
@@ -54,7 +58,7 @@
         input,
         textarea {
           width: 100%;
-          height: auto;
+          height: 100%;
           outline: none;
           border: none;
           border-bottom: 1px solid white;
@@ -82,6 +86,21 @@
           cursor: pointer;
         }
       }
+    }
+  }
+}
+@media screen and (min-width: 280px) and (max-width: 1080px){
+  .contact-container{
+    padding: 1rem;
+    flex-direction: column;
+    .contact-infos-container{
+      width: 100%;
+      margin: 0;
+     
+    }
+    .contact-form-container{
+      width: 100%;
+      margin: 2rem 0;
     }
   }
 }
