feat: adjustment nav responsive

--- a/src/sass/styles/pages/home.scss
+++ b/src/sass/styles/pages/home.scss
@@ -97,8 +97,8 @@
         justify-content: end;
         align-items:end;
         position: relative;
-        top: 5rem;
-        left: 3rem;
+        top: 65px;
+        left: 50px;
         img {
         zoom: 0.9; 
 
