--- a/src/sass/styles/components/navbar.scss
+++ b/src/sass/styles/components/navbar.scss
@@ -77,7 +77,7 @@
     .brand{
       img{
        zoom: 0.7;
-       padding-top: 1.5rem; 
+       padding: 2rem; 
       }
      
     }
@@ -102,16 +102,16 @@
       top: 0;
       right: 0;
       width: 50%;
-      height: 100vh;
+      height: auto;
       background-color: $text-color;
       color: $light-text;
       z-index: 20;
-      border-radius: $border-radius;
       transition: 0.5s ease-in-out;
 
       .links-container {
         flex-direction: column;
         justify-content: center;
+        text-align: justify;
         margin: 10rem 0;
         transition: 0.5s ease-in-out;
 
@@ -119,6 +119,9 @@
           z-index: 25;
           color: $light-text;
           padding: 1rem 0;
+          &:hover{
+            border: 1px solid transparent;
+          }
         }
       }
     }
