--- a/src/sass/styles/components/navbar.scss
+++ b/src/sass/styles/components/navbar.scss
@@ -28,7 +28,7 @@
       justify-content: center;
 
       li {
-        margin: 1rem;
+        margin: 1rem 3rem;
         @include text-style(1.15rem, 500, 1em, $text-color);
         
 
@@ -111,7 +111,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 50%;
+      width: 55%;
       height: auto;
       background-color: $text-color;
       color: $light-text;
@@ -122,12 +122,13 @@
         flex-direction: column;
         justify-content: center;
         text-align: justify;
-        margin: 10rem 0;
+        height: 100%;
+        margin: 8rem 0;
         transition: 0.5s ease-in-out;
 
         li {
           color: $light-text;
-          padding: 1rem 0;
+          padding: 1rem ;
           display: flex;
           &:hover{
             border: 1px solid transparent;
