--- a/src/sass/styles/pages/home.scss
+++ b/src/sass/styles/pages/home.scss
@@ -97,8 +97,8 @@
         justify-content: end;
         align-items:end;
         position: relative;
-        top: 65px;
-        left: 50px;
+        top: -8rem;
+        left: 4rem;
         img {
         zoom: 0.9; 
 
