--- a/src/sass/styles/components/projects.scss
+++ b/src/sass/styles/components/projects.scss
@@ -87,22 +87,25 @@
 
 @media screen and (min-width: 280px) and (max-width: 1080px) {
   .projects {
-    width: 100%;
-    height: 85vh;
+    width: auto;
+    height: 80vh;
     .container {
       height: 100%;
       width: auto;
       height: auto;
+      margin: 0 0.4rem;
     }
     .project-section {
       padding-top: 0;
     }
     .img-projects {
       float: none;
-      width: 80%;
-      height: 45vh;
-      padding-top: 0;
-      padding-left: 0;
+      width: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 2rem;
       img {
         width: 75%;
       }
@@ -114,10 +117,11 @@
       padding-top: 1em;
       padding-left: 3em;
       h6 {
-        @include text-style(1.3rem, 600, 1.1rem, $orange);
+        @include text-style(1.3rem, 600, 1.5rem, $orange);
       }
       h1 {
         @include text-style(1.5rem, 500, 2.4rem, $text-color);
+        margin: 0.7rem 0;
       }
       p{
         @include text-style(1rem, 400, 1.8rem, $text-color);
@@ -133,10 +137,10 @@
       display: flex;
 
       a {
-        padding: 0.3rem;
+        padding: 0.4rem;
         margin: 0;
         width: 100%;
-        font-size: 0.90em;
+        font-size: 0.9rem;
       }
 
       a.active {
