feat: adjustment  style responsive mode -> nav and home

--- a/src/sass/styles/pages/about.scss
+++ b/src/sass/styles/pages/about.scss
@@ -1,104 +1,28 @@
-.about-infos-container {
-  display: flex;
-  align-items: center;
-  margin-top: 5rem;
-  img{
-    &:hover{
-      scale: 1.1;
-      transition: 2s ease-in-out;
-    }
-  }
-  .text-content {
-    width: 50vw;
-
-    h1 {
-      margin: 2rem 0;
-      @include text-style(3.15rem, 700, 4rem, $secondary-color);
-    }
-
-    p {
-      margin: 2rem 0;
-      @include text-style(1.3rem, 400, 2.6rem, $text-color)
-    }
-
-    button {
-      @include button-style(
-        none,
-        1px solid transparent,
-        3rem,
-        15rem,
-        $secondary-color,
-        $light-text
-      );
-      font-size: 1.25rem;
-      cursor: pointer;
-
-      &:hover{
-        @include button-style(
-          none,
-          1px solid $primary-color,
-          3rem,
-          15rem,
-          transparent,
-          $secondary-color
-        );
-      }
-    }
-  }
-}
-.values-container{
+.about {
+  border: 1px solid red;
+  .about-infos-container {
     display: flex;
-    justify-content: center;
-    margin: 10rem 2rem;
-    padding: 5rem;
-    background-color: $secondary-color;
-    border-radius: 10px;
-
-    .values-item{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: 3rem 2.2rem;
-
-        img{
-            width: 7rem;
-          &:hover{
-            scale: 1.2;
-            transition: 2s ease-in-out;
-          }
-        }
-        
-        h3{
-            @include text-style(2.3rem, 600, 2rem, $light-text);
-            margin: 2rem 0;
-        }
-        p{
-            @include text-style(1.1rem, 300, 2rem, $light-text);
-        }
-    }
-}
-@media screen and (min-width: 280px) and (max-width: 1080px) {
-  .about-infos-container{
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-
-    img{
-      width: 100%;
+    padding: 8rem;
+    img {
+      &:hover {
+        scale: 1.1;
+        transition: 2s ease-in-out;
+      }
     }
     .text-content {
-      width: 85vw;
-  
+      width: 50vw;
+
       h1 {
         margin: 2rem 0;
-        @include text-style(2.3rem, 700, 4rem, $secondary-color);
+        @include text-style(3.15rem, 700, 4rem, $secondary-color);
       }
-  
+
       p {
         margin: 2rem 0;
-        @include text-style(1.3rem, 400, 2.5rem, $text-color)
+        @include text-style(1.3rem, 400, 2.6rem, $text-color);
       }
-  
+
       button {
         @include button-style(
           none,
@@ -110,7 +34,8 @@
         );
         font-size: 1.25rem;
         cursor: pointer;
-        &:hover{
+
+        &:hover {
           @include button-style(
             none,
             1px solid $primary-color,
@@ -123,14 +48,97 @@
       }
     }
   }
-  .values-container{
-    width: 100%;
-    flex-direction: column;
-    margin: 10rem 0;
-    text-align: center;
-    .values-item{
-      text-align: center;
+  .values-container {
+    display: flex;
+    justify-content: center;
+    margin: 10rem 2rem;
+    padding: 5rem;
+    background-color: $secondary-color;
+    border-radius: 10px;
+
+    .values-item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 3rem 2.2rem;
+
+      img {
+        width: 7rem;
+        &:hover {
+          scale: 1.2;
+          transition: 2s ease-in-out;
+        }
+      }
+
+      h3 {
+        @include text-style(2.3rem, 600, 2rem, $light-text);
+        margin: 2rem 0;
+      }
+      p {
+        @include text-style(1.1rem, 300, 2rem, $light-text);
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 280px) and (max-width: 1080px) {
+  .about {
+    overflow-x: hidden;
+
+    .about-infos-container {
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
+
+      img {
+        width: 100%;
+      }
+      .text-content {
+        width: 85vw;
+
+        h1 {
+          margin: 2rem 0;
+          @include text-style(2.3rem, 700, 4rem, $secondary-color);
+        }
+
+        p {
+          margin: 2rem 0;
+          @include text-style(1.3rem, 400, 2.5rem, $text-color);
+        }
+
+        button {
+          @include button-style(
+            none,
+            1px solid transparent,
+            3rem,
+            15rem,
+            $secondary-color,
+            $light-text
+          );
+          font-size: 1.25rem;
+          cursor: pointer;
+          &:hover {
+            @include button-style(
+              none,
+              1px solid $primary-color,
+              3rem,
+              15rem,
+              transparent,
+              $secondary-color
+            );
+          }
+        }
+      }
+    }
+    .values-container {
+      width: 100%;
+      flex-direction: column;
+      margin: 10rem 0;
+      text-align: center;
+      .values-item {
+        text-align: center;
+        align-items: center;
+      }
     }
   }
 }
