--- a/src/sass/styles/components/footer.scss
+++ b/src/sass/styles/components/footer.scss
@@ -22,7 +22,7 @@ footer {
         color: white;
       }
       svg {
-        zoom: 1.2;
+        zoom: 1;
       }
     }
   }
@@ -67,14 +67,34 @@ footer {
 
 @media screen and (min-width: 280px) and (max-width: 1080px) {
   footer {
+    padding: 0 0.2rem;
+    .container-menu {
+      .links-container {
+        margin-top: 0;
+        .links {
+          list-style: none;
+          @include text-style(0.85rem, 200, 2.25rem, $light-text);
+        }
+      }
+      .social-media {
+        margin-top: 1rem;
+  
+        a {
+          color: white;
+        }
+        svg {
+          zoom: 0.8;
+        }
+      }
+    }
     .solutions-container {
-        width: 85%;
+        width: 100%;
         margin-right: 1.9rem;
       .list-container {
         margin-top: 1rem;
         .list-item-container {
-          @include text-style(0.80rem, 200, 1.5rem, $light-text);
-          list-style: none;
+          @include text-style(0.55rem, 200, 1.3rem, $light-text);
+         
         }
       }
     }
@@ -82,7 +102,7 @@ footer {
         width: auto;
         .contact-content {
           p {
-            @include text-style(0.80rem, 200, 1.1rem, $light-text);
+            @include text-style(0.6rem, 200, 1.1rem, $light-text);
             padding: 0.25rem 0;
           }
           span {
