feat: adjsutment style responive mode --> solutions Ks

--- a/src/sass/styles/pages/solutions.scss
+++ b/src/sass/styles/pages/solutions.scss
@@ -1,4 +1,9 @@
 .solutions-container{
     height: auto;
-    padding-top: 4rem;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
 }
