--- a/src/sass/styles/components/form.scss
+++ b/src/sass/styles/components/form.scss
@@ -1,113 +1,118 @@
-.contact-container {
-  // main
-  display: flex;
-  width: auto;
-  height: auto;
-  margin-top: 7rem;
-
-  .contact-infos-container {
-    // Infos
-    width: 50%;
+.contact {
+  .contact-container {
+    // main
     display: flex;
-    justify-content: center;
-    height: 80vh;
-    flex-direction: column;
-    gap: 2rem;
-    padding-left: 2rem;
-    h1 {
-      @include text-style(2.45rem, 600, 2.75rem, $secondary-color);
-      width: 80%;
-      margin: 1rem;
-    }
-    .infos {
-      width: 80%;
-      margin: 1rem;
+    width: auto;
+    height: auto;
+    margin-top: 7rem;
 
-      span {
-        display: flex;
-        gap: 1rem;
-        padding: 1rem 0;
-        align-items: center;
-        svg {
-          color: $primary-color;
+    .contact-infos-container {
+      // Infos
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      height: 80vh;
+      flex-direction: column;
+      gap: 2rem;
+      padding-left: 2rem;
+      h1 {
+        @include text-style(2.45rem, 600, 2.75rem, $secondary-color);
+        width: 80%;
+        margin: 1rem;
+      }
+      .infos {
+        width: 80%;
+        margin: 1rem;
+
+        span {
+          display: flex;
+          gap: 1rem;
+          padding: 1rem 0;
+          align-items: center;
+          svg {
+            color: $primary-color;
+          }
         }
       }
     }
-  }
 
-  .contact-form-container {
-    // Form
-    width: 45%;
-    height: 100%;
-    padding: 2rem;
-    background-color: $secondary-color;
-    color: white;
-    border-radius: $border-radius;
-    margin: 2rem 0 4rem 0;
-    .form {
-      display: flex;
-      flex-direction: column;
-        h3{
-          @include text-style(1.5rem, 600, 2.4rem, $light-text);
-
-        }
-      .form-msg {
+    .contact-form-container {
+      // Form
+      width: 45%;
+      height: 100%;
+      padding: 2rem;
+      background-color: $secondary-color;
+      color: white;
+      border-radius: $border-radius;
+      margin: 2rem 0 4rem 0;
+      .form {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        margin: 3rem 0;
-        input,
-        textarea {
-          width: 100%;
-          height: 100%;
-          outline: none;
-          border: none;
-          border-bottom: 1px solid white;
-          margin: 1.55rem 0;
-          background-color: $secondary-color;
-          &:focus {
-            color: white;
-          }
-          &:not(:focus){
-            color: white;
-          }
-          &::placeholder {
-            color: white;
-          }
+        h3 {
+          @include text-style(1.5rem, 600, 2.4rem, $light-text);
         }
+        .form-msg {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          margin: 3rem 0;
+          input,
+          textarea {
+            width: 100%;
+            height: 100%;
+            outline: none;
+            border: none;
+            border-bottom: 1px solid white;
+            margin: 1.55rem 0;
+            background-color: $secondary-color;
+            &:focus {
+              color: white;
+            }
+            &:not(:focus) {
+              color: white;
+            }
+            &::placeholder {
+              color: white;
+            }
+          }
 
-        button {
-          width: 30%;
-          padding: 0.85rem;
-          border-radius: $border-radius;
-          outline: none;
-          border: none;
-          background-color: $primary-color;
-          color: $secondary-color;
-          cursor: pointer;
+          button {
+            width: 30%;
+            padding: 0.85rem;
+            border-radius: $border-radius;
+            outline: none;
+            border: none;
+            background-color: $primary-color;
+            color: $secondary-color;
+            cursor: pointer;
+          }
         }
       }
     }
   }
 }
-@media screen and (min-width: 280px) and (max-width: 1080px){
-  .contact-container{
-    padding: 0;
-    margin: 0;
-    flex-direction: column;
-    .contact-infos-container{
+@media screen and (min-width: 280px) and (max-width: 1080px) {
+  .contact {
+    .contact-container {
       width: auto;
-      height: auto;
+      padding: 0;
       margin: 0;
-      padding: 2rem 0;
-      h1{
-        @include text-style(1.9rem, 600, 2.5rem, $secondary-color);
+      flex-direction: column;
+
+      .contact-infos-container {
+        width: 100%;
+        height: auto;
+        margin: 1rem;
+        padding: 0 ;
+
+        h1 {
+          @include text-style(1.9rem, 600, 2.5rem, $secondary-color);
+        }
       }
-     
-    }
-    .contact-form-container{
-      width: 100%;
-      margin: 2rem 0;
+      .contact-form-container {
+        width: 100%;
+        margin: 2rem 0;
+      }
     }
   }
 }
