--- a/src/sass/styles/components/navbar.scss
+++ b/src/sass/styles/components/navbar.scss
@@ -82,7 +82,6 @@
     width: 100%;
     height: auto;
     position: relative;
-    z-index: 40;
     align-items: center;
 
     .brand{
@@ -126,11 +125,14 @@
         height: 100%;
         margin: 8rem 0;
         transition: 0.5s ease-in-out;
-
+        padding: 0;
         li {
-          color: $light-text;
-          padding: 1rem ;
+          padding: 0.5rem 0;
+          width: 100%;
           display: flex;
+          align-items: center;
+          @include text-style(1.3rem, 500, 1em, $light-text);
+
           &:hover{
             border: 1px solid transparent;
           }
