feat: style button specialist

--- a/src/sass/styles/components/cardSolutions.scss
+++ b/src/sass/styles/components/cardSolutions.scss
@@ -29,7 +29,8 @@
         flex-wrap: wrap;
         flex: 2;
         justify-content: center;
-        margin-top: 10%;
+        margin-top: 8rem;
+        width: 100%;
 
         .content-card {
             background: $text-color;
