--- a/src/sass/styles/components/projects.scss
+++ b/src/sass/styles/components/projects.scss
@@ -58,11 +58,9 @@
   }
 
   .navigation {
-    /* Estilos para a navegação */
-    margin: 0 auto;
-    width: 80%;
+    width: 100%;
     background-color: none;
-    padding: 1rem;
+    padding: 2rem 0;
     text-align: center;
 
     a {
